<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blender_gazebo</name>
  <version>1.0.0</version>
  <description>The blender_gazebo package for ROS2</description>

  <maintainer email="david_0429@hotmail.com">Dave Niewinski</maintainer>
  <maintainer email="malikawarunamal@gmail.com">Dave Niewinski</maintainer>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>
